--- a/python/problem_021.ipynb
+++ b/python/problem_021.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 21\n",
+    "# Problem 21\n",
     "https://projecteuler.net/problem=21"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "bdf4b125",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec45230e",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
@@ -31,22 +47,14 @@
     "    for i in range(1, n):\n",
     "        if n%i == 0:\n",
     "            f.append(i)\n",
-    "    return sum(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e18a2e1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return sum(f)\n",
+    "\n",
     "assert d(d(220)) == 220"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ac3a76dc",
    "metadata": {},
    "outputs": [],
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "819fd310",
    "metadata": {},
    "outputs": [
@@ -73,13 +81,41 @@
        "31626"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# answer\n",
     "sum(amicables(10_000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "85da20ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 s ± 26.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit sum(amicables(10_000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23abf82f",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
    ]
   },
   {
@@ -92,13 +128,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.38 s ± 49 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.99 s ± 17.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum(amicables(10_000))\n",
-    "euler.save_benchmark(21, t)"
+    "bm = %timeit -o sum(amicables(10_000))\n",
+    "import euler\n",
+    "euler.save_benchmark(21, bm)"
    ]
   }
  ],
@@ -118,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
