--- a/python/problem_022.ipynb
+++ b/python/problem_022.ipynb
@@ -5,36 +5,66 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 22\n",
+    "# Problem 22\n",
     "https://projecteuler.net/problem=22"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cbad4896",
+   "id": "f51c208e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "import string\n",
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16e20127",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60fd50bf",
+   "id": "9d10187a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = list(pd.read_csv('../data/0022_names.txt').T.index)\n",
-    "names.sort()"
+    "import string"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "12c8b07c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"../data/0022_names.txt\", \"r\")\n",
+    "s = f.readline()\n",
+    "f.close()\n",
+    "\n",
+    "names = s.strip('\"').split('\",\"')\n",
+    "names.sort()\n",
+    "\n",
+    "assert len(names) == 5163"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "1fd7e548",
    "metadata": {},
    "outputs": [],
@@ -44,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c3006dd7",
    "metadata": {},
    "outputs": [],
@@ -53,23 +83,15 @@
     "    value = 0\n",
     "    for letter in name:\n",
     "        value += alphabetical_value[letter]\n",
-    "    return value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "efedce9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return value\n",
+    "\n",
     "assert name_value('COLIN') == 53"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "30220ec2",
+   "id": "efedce9a",
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +106,40 @@
     }
    ],
    "source": [
+    "# answer\n",
     "sum([(i+1)*(name_value(n)) for (i, n) in enumerate(names)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "30220ec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.23 ms ± 20.4 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit sum([(i+1)*(name_value(n)) for (i, n) in enumerate(names)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d88625ae",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "6c122671",
    "metadata": {},
    "outputs": [
@@ -97,13 +147,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.34 ms ± 3.85 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.22 ms ± 17 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum([(i+1)*(name_value(n)) for (i, n) in enumerate(names)])\n",
-    "euler.save_benchmark(22, t)"
+    "bm = %timeit -o sum([(i+1)*(name_value(n)) for (i, n) in enumerate(names)])\n",
+    "import euler\n",
+    "euler.save_benchmark(22, bm)"
    ]
   }
  ],
@@ -123,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
