--- a/julia/problem_023.ipynb
+++ b/julia/problem_023.ipynb
@@ -5,24 +5,49 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 23\n",
+    "# Problem 23\n",
     "https://projecteuler.net/problem=23"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4289b3d4",
+   "id": "d770386d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4289b3d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33829227",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "ec4a6db8",
    "metadata": {},
    "outputs": [
@@ -42,20 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "64f84068",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "proper_divisors (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function proper_divisors(n)\n",
     "    divisor_list = Int64[]\n",
@@ -66,34 +81,30 @@
     "        end\n",
     "    end\n",
     "    return sort(unique(divisor_list))[1:end-1]\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "6e32876c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "is_abundant (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function is_abundant(n)::Bool\n",
-    "    return sum(proper_divisors(n)) > n\n",
-    "end"
+    "end\n",
+    "\n",
+    "# Note: for this solution, the last proper divisor `28` is removed.\n",
+    "@assert proper_divisors(28) == [1, 2, 4, 7, 14]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "6e32876c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function is_abundant(n)::Bool\n",
+    "    return sum(proper_divisors(n)) > n\n",
+    "end\n",
+    "\n",
+    "@assert is_abundant(12)\n",
+    "@assert !is_abundant(28)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "29535e45",
    "metadata": {},
    "outputs": [
@@ -121,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5fc6f7ca",
    "metadata": {},
    "outputs": [
@@ -150,10 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "209ad304",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  6.989 s (97636884 allocations: 3.52 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -165,45 +183,33 @@
     }
    ],
    "source": [
-    "non_abundants_sums(combinations(filter(is_abundant, 1:hi)))"
+    "@btime non_abundants_sums(combinations(filter(is_abundant, 1:hi))) samples=1 evals=1"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "5d99e98c",
+   "cell_type": "markdown",
+   "id": "5c15b7ca",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
-       " Single result which took \u001b[34m11.278 s\u001b[39m (34.48% GC) to evaluate,\n",
-       " with a memory estimate of \u001b[33m3.52 GiB\u001b[39m, over \u001b[33m97636884\u001b[39m allocations."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark non_abundants_sums(combinations(filter(is_abundant, 1:hi)))"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b3a0f25a",
+   "id": "5d99e98c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(23, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark non_abundants_sums(combinations(filter(is_abundant, 1:hi))) samples=3 evals=3\n",
+    "euler.save_benchmark(23, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -211,7 +217,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
