--- a/python/problem_023.ipynb
+++ b/python/problem_023.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 23\n",
+    "# Problem 23\n",
     "https://projecteuler.net/problem=23"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "e0aa558c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6257b7c2",
+   "metadata": {},
+   "source": [
+    "### Solutuon"
    ]
   },
   {
@@ -98,6 +114,7 @@
     }
    ],
    "source": [
+    "# answer\n",
     "non_abundant_sums(n=28123)"
    ]
   },
@@ -111,13 +128,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22 s ± 906 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "19.4 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o non_abundant_sums(n=28123)\n",
-    "euler.save_benchmark(23, t)"
+    "# benchmark\n",
+    "%timeit -n1 -r1 non_abundant_sums(n=28123)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d25b2ada",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9e492d88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19 s ± 57.1 ms per loop (mean ± std. dev. of 3 runs, 3 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o -n3 -r3 non_abundant_sums(n=28123)\n",
+    "import euler\n",
+    "euler.save_benchmark(23, bm)"
    ]
   }
  ],
@@ -137,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
