--- a/python/problem_024.ipynb
+++ b/python/problem_024.ipynb
@@ -5,24 +5,49 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 24\n",
+    "# Problem 24\n",
     "https://projecteuler.net/problem=24"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "723ada8a",
+   "id": "6d81dc9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import itertools\n",
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81ef1aab",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "723ada8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "9709d045",
    "metadata": {},
    "outputs": [],
@@ -35,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "15534468",
    "metadata": {},
    "outputs": [
@@ -45,18 +70,46 @@
        "2783915460"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# answer\n",
     "lexicographic_permutations(1_000_000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "b09b2062",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "387 ms ± 3.25 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit lexicographic_permutations(1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38641f70",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "81fe1c88",
    "metadata": {},
    "outputs": [
@@ -64,13 +117,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "644 ms ± 103 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "386 ms ± 1.38 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o lexicographic_permutations(1_000_000)\n",
-    "euler.save_benchmark(24, t)"
+    "bm = %timeit -o lexicographic_permutations(1_000_000)\n",
+    "import euler\n",
+    "euler.save_benchmark(24, bm)"
    ]
   }
  ],
@@ -90,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
