--- a/python/problem_025.ipynb
+++ b/python/problem_025.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 25\n",
+    "# Problem 25\n",
     "https://projecteuler.net/problem=25"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "9abab9c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e539c3e6",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
@@ -69,12 +85,40 @@
     }
    ],
    "source": [
+    "# answer\n",
     "nthdigitfib(1_000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "6cc6ef1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.6 ms ± 26.5 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit nthdigitfib(1_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc5862c8",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "4b726253",
    "metadata": {},
    "outputs": [
@@ -82,13 +126,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.6 ms ± 657 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "19.6 ms ± 4.9 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o nthdigitfib(1_000)\n",
-    "euler.save_benchmark(25, t)"
+    "bm = %timeit -o nthdigitfib(1_000)\n",
+    "import euler\n",
+    "euler.save_benchmark(25, bm)"
    ]
   }
  ],
@@ -108,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
