--- a/julia/problem_027.ipynb
+++ b/julia/problem_027.ipynb
@@ -5,24 +5,59 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 27\n",
+    "# Problem 27\n",
     "https://projecteuler.net/problem=27"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eea5bf7a",
+   "id": "a7a8e0e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using Primes, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "eea5bf7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5831f0e",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "70ff0b87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Primes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "54d0c5f9",
    "metadata": {},
    "outputs": [
@@ -48,10 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "41f2c0aa",
+   "execution_count": 5,
+   "id": "7086e1c6",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  26.422 ms (15 allocations: 6.05 KiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -63,56 +105,39 @@
     }
    ],
    "source": [
-    "dictionary = Dict(consecutive_primes(a, b) => a*b for a in -999:999 for b in -1000:1000)\n",
-    "dictionary[maximum(keys(dictionary))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8198fe81",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 67 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m49.233 ms\u001b[22m\u001b[39m … \u001b[35m189.295 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m64.328 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m74.831 ms\u001b[22m\u001b[39m ± \u001b[32m 35.195 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m0.00% ± 0.00%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▁\u001b[39m \u001b[39m▄\u001b[34m█\u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▇\u001b[39m▄\u001b[39m▄\u001b[39m▅\u001b[39m█\u001b[39m▃\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m▅\u001b[39m▁\u001b[39m▃\u001b[32m▁\u001b[39m\u001b[39m▃\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▄\u001b[39m \u001b[39m▁\n",
-       "  49.2 ms\u001b[90m         Histogram: frequency by time\u001b[39m          176 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m6.05 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m15\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark begin\n",
+    "b = @btime begin\n",
     "    dictionary = Dict(consecutive_primes(a, b) => a*b for a in -999:999 for b in -1000:1000)\n",
     "    dictionary[maximum(keys(dictionary))]\n",
     "end"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8fa3781d",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a33fa6f5",
+   "execution_count": 6,
+   "id": "99b58934",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(27, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark begin\n",
+    "    dictionary = Dict(consecutive_primes(a, b) => a*b for a in -999:999 for b in -1000:1000)\n",
+    "    dictionary[maximum(keys(dictionary))]\n",
+    "end\n",
+    "euler.save_benchmark(27, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -120,7 +145,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
